<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout android:id="@+id/linearProduct"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageRectangle344"
            android:layout_height="@dimen/_135pxh"
            android:layout_width="@dimen/_101pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_rectangle344_135x101}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle344_135x101"/>
        <FrameLayout android:id="@+id/frameStackunion"
            android:layout_height="@dimen/_108pxv"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_218pxh">
            <ImageView android:id="@+id/imageUnion"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_13pxh"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_14pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_union_amber_600_13x14"
                tools:ignore="ContentDescription" tools:src="@drawable/img_union_amber_600_13x14"/>
            <LinearLayout android:id="@+id/linearColumnrecycleboucle"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRecycleBoucle"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text=""
                    style="@style/txtTenorSans14_4" tools:text="@string/msg_high_waist_jean"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text=""
                    style="@style/txtTenorSans15" tools:text="@string/lbl_40"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowstarone"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageStarOne"
                        android:layout_height="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_13pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_star1"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_star1"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRatingsCounter"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_weight="0.83"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtTenorSans12_1" tools:text="@string/lbl_4_8_ratings"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowsize"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSize"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_weight="0.26"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtTenorSans12_1" tools:text="@string/lbl_size"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup199"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_8pxh"
                        android:paddingStart="@dimen/_8pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtRoundedOutline" tools:text="@string/lbl_s"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup200"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_6pxh"
                        android:paddingStart="@dimen/_6pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtRoundedOutline" tools:text="@string/lbl_m"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroup201"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_weight="0.25"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:paddingBottom="@dimen/_8pxv"
                        android:paddingEnd="@dimen/_8pxh"
                        android:paddingStart="@dimen/_8pxh"
                        android:paddingTop="@dimen/_5pxv"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtRoundedOutline" tools:text="@string/lbl_l"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
