<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:id="@+id/linearCart"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageRectangle344"
            android:layout_height="@dimen/_135pxh"
            android:layout_width="@dimen/_101pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_rectangle344_9}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle344_9"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlamerei"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_14pxv"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_weight="0.49" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLamerei"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.1"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text=""
                android:textAllCaps="true"
                style="@style/txtTenorSans14_8" tools:text="@string/lbl_h_x_o"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRecycleBoucle"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text=""
                style="@style/txtTenorSans12_3" tools:text="@string/lbl_denim_jean_bag"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowone"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <RadioButton android:buttonTint="@color/gray_400_6c"
                    android:ellipsize="end"
                    android:fontFamily="@font/tenor_sans"
                    android:id="@+id/rbOne"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.64"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_1"
                    android:textColor="@color/black_900"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_14pxh"
                    android:textStyle="bold" tools:text="@string/lbl_1"/>
                <ImageButton
                    android:background="@drawable/rectangle_border_gray_400_6c_radius_12_17"
                    android:id="@+id/btnCloseOne"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:paddingHorizontal="@dimen/_6pxh"
                    android:paddingVertical="@dimen/_6pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_close" tools:ignore="ContentDescription"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text=""
                style="@style/txtTenorSans15" tools:text="@string/lbl_52"/>
        </LinearLayout>
    </LinearLayout>
</layout>
