<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cartEmpty">


    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnclose"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_1pxv"
        android:layout_marginEnd="@dimen/_4pxh"
        android:layout_marginTop="@dimen/_16pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearCartEmpty"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:id="@+id/imageClose"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_width="@dimen/_12pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_close_13x13"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_close_13x13"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCART"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.15"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_cart"
                    android:textAllCaps="true"
                    style="@style/txtTenorSans14" tools:text="@string/lbl_cart2"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtYouhavenoite"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_248pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@string/msg_you_have_no_ite"
                    style="@style/txtTenorSans16_5" tools:text="@string/msg_you_have_no_ite"/>
                <LinearLayout android:gravity="center_vertical"
                    android:id="@+id/linearContent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_150pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStyleamber_600">
                    <ImageView android:id="@+id/imageBag"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginStart="@dimen/_73pxh"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_bag_19x16"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_bag_19x16"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCheckout"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_18pxv"
                        android:layout_marginEnd="@dimen/_71pxh"
                        android:layout_marginStart="@dimen/_26pxh"
                        android:layout_marginTop="@dimen/_22pxv"
                        android:layout_weight="0.92"
                        android:layout_width="0dp"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/msg_continue_shoppi"
                        android:textAllCaps="true"
                        style="@style/txtTenorSans16_1" tools:text="@string/msg_continue_shoppi"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>